# videowidget

./: CMakeLists.txt  videoplayer.cpp
